--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             display: none; /* Hide header on counter scene */
         }
 
-        /* Customers */
+        /* Customers_고객 위치 */
         #customer-display-area {
             display: flex;
             justify-content: space-around;
@@ -157,7 +157,7 @@
             border-bottom: none;
             margin-bottom: 0;
             position: absolute;
-            bottom: 19%; /* Raised a bit more */
+            bottom: 18%; /* Raised a bit more */
             left: 0;
             z-index: 5;
         }
