--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
     <div id="game-over-modal">
         <div class="game-over-content">
             <h1 style="font-size: 3rem; margin-bottom: 20px;">GAME OVER</h1>
-            <p style="font-size: 1.5rem;">미션 실패! Game over!.</p>
+            <p style="font-size: 1.5rem;">미션 실패!</p>
             <p>최종 평판: <span id="final-rep">0</span></p>
             <button class="btn" onclick="restartGame()" style="font-size: 1.5rem; padding: 15px 30px; margin-top: 20px;">다시 시작하기</button>
         </div>
