--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
             .scene { padding: 2px 6px 6px 6px; }
             
             /* 카운터+고객 / 서빙+버튼 / 버전 간격 축소 */
-            #scene-counter { padding-bottom: 20px; padding-top: 0; }
+            #scene-counter { padding-bottom: 75px; padding-top: 0; }
             .counter-background-wrapper {
                 width: 100%;
                 top: 28px;
@@ -762,7 +762,20 @@
                 margin-right: 8px;
             }
             
-            /* 네비 버튼 - 버전과 간격 축소 */
+            /* 네비 버튼 - 모바일에서 항상 보이도록 고정 */
+            #scene-counter .nav-btn-container {
+                position: fixed;
+                bottom: 28px;
+                left: 0;
+                right: 0;
+                margin: 0;
+                padding: 0 10px;
+                z-index: 100;
+                display: flex;
+                gap: 8px;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
             .nav-btn-container { margin-top: 4px; }
             .nav-btn-container {
                 display: flex;
@@ -862,7 +875,8 @@
         /* 높이가 좁은 화면 (세로가 짧은 기기) */
         @media (max-height: 600px) {
             body { padding-bottom: 35px; }
-            #scene-counter { padding-bottom: 25px; }
+            #scene-counter { padding-bottom: 70px; }
+            #scene-counter .nav-btn-container { bottom: 24px; }
             header { padding: 4px 6px; }
             header > div:last-child { font-size: 0.6rem; }
             #mission-bar { padding: 3px 6px; font-size: 0.75rem; }
@@ -889,6 +903,7 @@
         /* 높이+너비 모두 좁은 화면 */
         @media (max-width: 480px) and (max-height: 600px) {
             body { padding-bottom: 32px; }
+            #scene-counter .nav-btn-container { bottom: 22px; }
             .counter-background-wrapper { top: 20px; height: 55%; max-height: 46vh; }
             .serving-counter-wrapper { padding-top: 8px; }
             #customer-display-area { bottom: 2%; }
@@ -1068,7 +1083,7 @@
 
     <audio id="bgm-player" loop></audio>
 
-    <div id="version-info">Mixed_calculation_cafe made by gamtudyssam 0.0009</div>
+    <div id="version-info">Mixed_calculation_cafe made by gamtudyssam 0.00091</div>
 
     <script>
         // --- Game Data ---
