--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,7 @@
 
     <audio id="bgm-player" loop></audio>
 
-    <div id="version-info">Mixed_calculation_cafe made by gamtudyssam 0.00093</div>
+    <div id="version-info">Mixed_calculation_cafe made by gamtudyssam 0.00094</div>
 
     <script>
         // --- Game Data ---
@@ -1392,7 +1392,7 @@
             // Liquids
             { id: 'water', name: '물', icon: '💧' },
             { id: 'milk', name: '우유', icon: '<img src="milk.png" alt="우유">' },
-            { id: 'sparkling', name: '탄산수', icon: '🫧' },
+            { id: 'sparkling', name: '탄산수', icon: '<img src="sparkling_water.png" alt="탄산수">' },
             
             // Coffee
             { id: 'bean', name: '원두', icon: '<img src="coffeebeans.png" alt="원두">' },
